fixed to work on iphone X

--- a/login.css
+++ b/login.css
@@ -1,19 +1,73 @@
+@media screen and (max-device-width: 480px){
+	html, body {
+		height: 812px;
+		width: 375px;
+		overflow: hidden !important;
+		margin: 0;
+		padding: 0;
+	}
+	#login-box {
+		margin: auto;
+		height: 100vh;
+		width: 100%;
+		overflow: hidden !important;
+		
+		background-color: lightblue;
+		display: grid;
+		grid-template-columns: 20% 30% 30% 20%;
+		grid-template-rows: 5% 15% 20% 5% 10% 10% 15% 15% 5%;
+		grid-template-areas:
+				". . . ."
+				". title title ."
+				". title title ."
+				". . . ."
+				". username username ."
+				". password password ."
+				". . . ."
+				". login register ."
+				". . . ."
+	}
+	
+	#title {
+		grid-area: title;
+		background-color: beige;
+	}
+	
+	#username {
+		grid-area: username;
+	}
+	
+	#password {
+		grid-area: password;
+	}
+	
+	.mui-btn--primary {
+		grid-area: login;
+	}
+	
+	.mui-btn--accent {
+		grid-area: register;
+	}
+}
+
 #login-box {
-	margin: auto;
-	height: 80vh;
-	width: 50vw;
-	margin-top: 10vh;
+	/* margin: auto; */
+	height: 101vh;
+	width: 100vw;
+	/* margin-top: .vh; */
 	background-color: lightblue;
 
 	display: grid;
 	grid-template-columns: 20% 30% 30% 20%;
-	grid-template-rows: 5% 15% 20% 20% 20% 15% 5% ;
+	grid-template-rows: 5% 15% 20% 5% 10% 10% 15% 15% 5% ;
 	grid-template-areas:
 			". . . ."
 			". title title ."
 			". title title ."
+			". . . ."
 			". username username ."
 			". password password ."
+			". . . ."
 			". login register ."
 			". . . ."
 }
@@ -33,8 +87,10 @@
 
 .mui-btn--primary {
 	grid-area: login;
+	font-size: 10px !important;
 }
 
 .mui-btn--accent {
 	grid-area: register;
+	font-size: 10px !important;
 }
