--- a/profile.css
+++ b/profile.css
@@ -72,3 +72,86 @@ p{
 #message {
 	grid-area: message;
 }
+
+@media screen and (max-device-width: 480px){
+    #login-box {
+        margin: auto;
+        height: 100vh;
+        width: 100vw;
+        background-color: lightblue;
+    
+        display: grid;
+        grid-template-columns: 20% 30% 30% 20%;
+        grid-template-rows: 2.5% 10% 12.5% 15% 15% 15% 15% 4% 10% 1%;
+        grid-template-areas:
+                ". . . ."
+                ". title title ."
+                ". username username ."
+                ". email email ."
+                ". country country ."
+                ". proficient proficient ."
+                ". practicing practicing ."
+                ". . . ."
+                ". edit message ."
+                ". . . ."
+    }
+    .profile_field{
+        justify-content: space-between;
+        border-bottom: 1px solid gray;
+    }
+
+    h2{
+        font-weight: bold;
+    }
+    
+    p{
+        display: inline;
+        position: absolute;
+        bottom: 0;
+    }
+    
+    .u{
+        right: 0%;
+    }
+    
+    #title {
+        grid-area: title;
+        background-color: beige;
+        text-align: center;
+    }
+    
+    #username {
+        grid-area: username;
+        display: flex;
+    }
+    
+    #email {
+        grid-area: email;
+        display: flex;
+    }
+    
+    #country {
+        grid-area: country;
+        display: flex;
+    }
+    
+    #proficient {
+        grid-area: proficient;
+        display: flex;
+    }
+    
+    #practicing {
+        grid-area: practicing;
+        display: flex;
+    }
+    
+    #edit {
+        grid-area: edit;
+        font-size: 10px;
+    }
+    
+    #message {
+        grid-area: message;
+        font-size: 10px;
+    }
+}
